# Global-Tutorials

./: package.json  pnpm-lock.yaml
Cpp-Tutorial/: Readme.md
Cpp-Tutorial/01_varconst/: main.cpp
Cpp-Tutorial/02_primitives/: input.cpp  main.cpp  modifier.cpp  string.cpp  type.casting  type.casting.cpp
Cpp-Tutorial/03_conditions/: main.cpp  task.cpp
Cpp-Tutorial/04_loops/: break.cpp  continue.cpp  dowhile.cpp  for.cpp  main.cpp
Cpp-Tutorial/05_func/: callby.cpp  lambda.cpp  main.cpp
Cpp-Tutorial/06_pointer_array_memory/: n_d_array.cpp  one.cpp  pointer.cpp  two.cpp
Cpp-Tutorial/07_oop/: 01_const.cpp  02_const.cpp  main.cpp
Cpp-Tutorial/08_stl/: stl_emp_manage.cpp  stl_practice.cpp
Cpp-Tutorial/ErrorWarningProgram/: main.cpp
Cpp-Tutorial/FirstCProgram/: main.cpp
Cpp-Tutorial/StatementFunctionProgram/: inputOutput.cpp  main.cpp
Langchain-Tutorial/: pyproject.toml  requirements.txt
Langchain-Tutorial/generativeAi/: 1-langchain-intro.ipynb  2-tools.ipynb  3-agentintro.ipynb  4-agentmultipletools.ipynb  5-accessing-context.ipynb  6-agent-practicing.ipynb
Nextjs-Tutorial/: package.json
Prisma-Tutorial/: package.json  pnpm-lock.yaml
Prisma-Tutorial/prisma/: schema.prisma
Prisma-Tutorial/src/: app.service.ts
Rag-LangGraph-Tutorial/: .env  .gitignore  chunking.py  documents_loader.py  embeddings_deep.py  hybrid_search.py  main.py  pyproject.toml  similaritySearch.py  text_splitters.py
Rag-LangGraph-Tutorial/chromadb/: app.py  (+1 more)
Typescript-Tutorial/: .gitignore  package-lock.json  package.json
nestjs-tutorial/: package-lock.json  package.json
(+33 files in other folders)
